<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NoteEditor">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="vertical"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleLayout"
            style="@style/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_do">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteLayout"
            style="@style/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="top|start"
            android:layout_below="@id/titleLayout"
            android:minLines="6"
            android:layout_marginTop="20dp"
            android:hint="@string/note">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_padding"
            android:layout_marginTop="20dp"
            android:background="@drawable/body_bg"
            android:elevation="1dp"
            android:padding="@dimen/layout_padding">

            <TextView
                android:id="@+id/idTitle"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_padding"
                android:padding="@dimen/view_padding"
                android:text="Upload Image" />

            <ImageView
                android:id="@+id/iDImageView"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                android:layout_below="@id/idTitle"
                android:layout_marginBottom="@dimen/view_padding"
                android:adjustViewBounds="true"
                android:background="@color/pressed_bg"
                android:padding="@dimen/view_padding"
                android:src="@drawable/file"
                android:contentDescription="@string/image" />

            <Button
                android:id="@+id/idCaptureBtn"
                style="@style/btn_small"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:onClick="chooseImage"
                android:layout_below="@id/iDImageView"
                android:layout_marginTop="@dimen/layout_padding"
                android:drawableEnd="@drawable/ic_photo_camera"
                android:text="@string/choose_image"
                android:textSize="12sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/updateBtn"
            style="@style/myLoginButton"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_note" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>